[gd_scene load_steps=7 format=3 uid="uid://c4cd34odmmos7"]

[ext_resource type="Script" path="res://scenes/power_pole.gd" id="1_213qv"]
[ext_resource type="Texture2D" uid="uid://bc84nblp227ia" path="res://assets/sprites/power_pole.png" id="1_xfd3o"]
[ext_resource type="Resource" uid="uid://1utsvfk1t4a8" path="res://resources/default.WireSettings.tres" id="2_pbyih"]
[ext_resource type="Gradient" uid="uid://dgn4q6wqo5ctv" path="res://resources/shadow_gradient.Gradient.tres" id="3_vfbas"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_exbia"]
gradient = ExtResource("3_vfbas")
width = 16
height = 6
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.5, 0)

[sub_resource type="CircleShape2D" id="CircleShape2D_bic4p"]
radius = 96.0

[node name="PowerPole" type="StaticBody2D" groups=["machines"]]
collision_layer = 8
collision_mask = 0
script = ExtResource("1_213qv")
wire_settings = ExtResource("2_pbyih")

[node name="AttachmentPoint" type="Marker2D" parent="."]
position = Vector2(0, -24)

[node name="Shadow" type="Sprite2D" parent="."]
texture = SubResource("GradientTexture2D_exbia")

[node name="Body" type="Sprite2D" parent="."]
texture = ExtResource("1_xfd3o")
offset = Vector2(0, -12)

[node name="ConnectionArea" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="ConnectionArea"]
scale = Vector2(1, 0.5)
shape = SubResource("CircleShape2D_bic4p")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(4, 0, 0, 2, -4, 0, 0, -2)

[node name="Wires" type="Node2D" parent="."]
z_index = 100

[connection signal="body_entered" from="ConnectionArea" to="." method="on_connection_area_body_entered"]
